bad/incr_field_array_mcall.example_compiler_output
ERROR
[1mbad/incr_field_array_mcall.lat:10:19: [1;31merror: [0;1m++ operator is valid only for integer values not `int[]`[m
	(new M).foo().fld++;
	                 [1;32m^[m
